src/styles/main.scss
// Override default variables
$primary-hue: 335;



// $primary-500: #84f403;
// $primary-600: #84f403;
// $primary-700: #84f403;

// Import Pico
// @import "@picocss/pico/scss/pico";

@font-face {
  font-family: "Publicpixel";
  src: url("/fonts/PublicPixel.ttf") format('truetype');
}





:root {
  // Colors
  --primary: #f85e87;
  --primary-shadow: #c5384d;
  --primary-hover: #F7A9A8;
  --primary-inverse: #fff;
  --secondary:#A2DED0;
  --neutral:#a3a3a3;
  --neutral-light:#e9e9e9;
  --neutral-dark:#525252;
  --neutral-black:#000;
  --neutral-text: #000;

  // Typography
  font-family: "Publicpixel", courier, monospace;
  line-height: 1.5;
  font-size:16px;

  // spaceing
  --spacing: 1rem;
  --typography-spacing-vertical: 1.5rem;
  --block-spacing-vertical: calc(var(--spacing) * 2);
  --form-element-spacing-vertical: 0.75rem;
  --form-element-spacing-horizontal: 1rem;
}

[data-theme=dark] {
  --background-color:#222;
  --neutral-text: #b4b4b4;
  --neutral-light: #303030;
  --secondary: #2b6e5e;
}

body {
  color: var(--neutral-text);
  background-color: var(--background-color);
}

/**
 * Section
 * Responsive spacings for section
 */
 section {
  margin-bottom: var(--block-spacing-vertical);
}


.grid {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.list {
  display: flex;
  flex-direction: column;
}

/**
 * Form elements
 *
 */

input {
  font-family: "Publicpixel", courier, monospace;
  padding-inline-start: calc(var(--form-element-spacing-horizontal) + 1.75rem);
  border: 6px solid var(--primary);
  padding:1em;
  outline: none;
}

input[type=search]:focus {
  // text-decoration: none;
  border: 6px solid var(--primary-hover);
  color: var(--primary);
}



.button,
button {
  background-color: var(--primary);
  color : var(--primary-inverse);
  // box-shadow: 1px 1px 0px 2px var(--secondary);
  border: 2px solid var(--neutral-dark);

  display: block;
  padding : 1em;
  // margin: .5em;

  font-family: "Publicpixel", courier, monospace;
  text-transform: uppercase;
  text-decoration: none;
  // outline: none;
  cursor: pointer;

}

.button.secondary {
  background-color: var(--primary-inverse);
  color: var(--secondary);
  border-color:var(--secondary);
}

.button:is([aria-current], :hover, :active),
button:is([aria-current], :hover, :active),
input[type=submit]:is([aria-current], :hover, :active),
input[type=button]:is([aria-current], :hover, :active),
input[type=reset]:is([aria-current], :hover, :active),
[role=button]:is([aria-current], :hover, :active) {
  // background-color: var(--primary-shadow);
  border-color: var(--primary);
  background-color: var(--primary-hover);
}

.button:focus,
li a:focus,
button:is([aria-current], :focus),
input[type=submit]:focus,
input[type=button]:focus,
input[type=reset]:focus,
[role=button]:focus {
  // border-color: var(--primary-hover);
  outline-color:var(--primary-hover);
  outline-width:6px;
  outline-style:solid;
  outline-offset: -6px;
  z-index:5;
}

.button.secondary:is([aria-current], :hover, :active, :focus)
{
  background-color: var(--primary-inverse);
  color: var(--primary);
  border-color: var(--primary-hover);
}
.button.neutral {
  color:var(--neutral-dark);
  background-color: inherit;
  border-color:var(--neutral-light);
}
.button.neutral:is([aria-current], :hover, :active, :focus)
{
  background-color: var(--primary-inverse);
  color: var(--primary);
  border-color: var(--primary-hover);
}

// List
li a {
  color:var(--neutral-dark);

  display: block;
  padding : 1em;

  text-decoration: none;
  outline: none;
}

li:nth-child(odd) a{
  background-color: #f8f8f8;
}

li a:is([aria-current], :hover, :active)
{
  color:var(--primary);
}


.graph-error {
  font-size: 2.5em;
  padding: 1em;
}


// Headings
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  margin-bottom: var(--typography-spacing-vertical);

  text-shadow: 3px 3px var(--secondary);
  color: var(--primary);
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.75rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

h5 {
  font-size: 1.125rem;
}

/**
 * Markdown articles
 */
.article p {
  margin: 3em;
  line-height: 1.6em;
}

a {
  color: var(--primary);
}

